Work on Safari IOS colour bug by adding -webkit-appearance: none

--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ button {
 
 #options-top,
 #options-bottom {
+    appearance: none;
+    -webkit-appearance: none;
     color: #000001;
 }
 
